Refactor header and footer structure for improved branding and layout; add editor styles support

--- a/parts/header.html
+++ b/parts/header.html
@@ -1,55 +1,18 @@
-<header class="dryft-header">
-	<div class="dryft-header__backdrop" aria-hidden="true"></div>
-
-	<div class="dryft-header__inner">
-		<div class="dryft-nav-bar">
-			<div class="dryft-logo" aria-label="Maxco logo placeholder">
-				<!-- Replace this with your SVG logo -->
-				<span>Maxco</span>
+<header class="maxco-header">
+	<div class="maxco-header__inner">
+		<div class="maxco-nav-bar">
+			<div class="maxco-logo" aria-label="Maxco logo placeholder">
+				Maxco
 			</div>
 
-			<nav class="dryft-nav" aria-label="Primary">
-				<a href="#tjanster">Tjänster</a>
+			<nav class="maxco-nav" aria-label="Primary">
+				<a href="#tjanster">Tjänster <span class="dropdown-arrow">▼</span></a>
 				<a href="#sa-funkar-det">Så funkar det</a>
 				<a href="#referenser">Referenser</a>
-				<a href="#om-oss">Om oss</a>
+				<a href="#om-oss">Om oss <span class="dropdown-arrow">▼</span></a>
 			</nav>
 
-			<a class="dryft-nav__cta" href="#kontakt">Kontakta oss</a>
-		</div>
-
-		<div class="dryft-hero">
-			<div class="dryft-hero__content">
-				<p class="dryft-hero__eyebrow">Allt du behöver för att</p>
-				<h1>renovera din bostad</h1>
-
-				<div class="dryft-hero__tags" role="list">
-					<span role="listitem">Hantverkare</span>
-					<span role="listitem">Material</span>
-					<span role="listitem">Projektledning</span>
-				</div>
-
-				<div class="dryft-hero__panel">
-					<p class="dryft-hero__prompt">Vad behöver du hjälp med?</p>
-					<div class="dryft-hero__actions">
-						<a class="dryft-btn" href="#renovering">Renovering</a>
-						<a class="dryft-btn dryft-btn--ghost" href="#smattjobb">Mindre jobb eller småfix</a>
-					</div>
-					<p class="dryft-hero__hint">T.ex. badrum, kök eller större renovering · T.ex. måla om eller byta blandare</p>
-				</div>
-
-				<div class="dryft-hero__meta">
-					<div class="dryft-rating" aria-label="4,8 av 5 i betyg efter 12 000 projekt">
-						<span class="dryft-stars" aria-hidden="true">★★★★★</span>
-						<span>4,8 av 5 i betyg efter 12 000 projekt</span>
-					</div>
-					<div class="dryft-locations" aria-label="Tjänster i Stockholm, Göteborg och Uppsala">
-						<span>Stockholm</span>
-						<span>Göteborg</span>
-						<span>Uppsala</span>
-					</div>
-				</div>
-			</div>
+			<a class="maxco-nav__cta" href="#kontakt">Kontakta oss</a>
 		</div>
 	</div>
 </header>
