--- a/parts/header.html
+++ b/parts/header.html
@@ -1,18 +1,28 @@
-<header class="maxco-header">
-	<div class="maxco-header__inner">
-		<div class="maxco-nav-bar">
-			<div class="maxco-logo" aria-label="Maxco logo placeholder">
-				Maxco
+<!-- wp:group {"className":"maxco-header","layout":{"type":"constrained"}} -->
+<div class="wp-block-group maxco-header">
+	<!-- wp:group {"className":"maxco-header__inner","layout":{"type":"constrained"}} -->
+	<div class="wp-block-group maxco-header__inner">
+		<!-- wp:group {"className":"maxco-nav-bar","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+		<div class="wp-block-group maxco-nav-bar">
+			<!-- wp:site-title {"level":0,"className":"maxco-logo"} /-->
+
+			<!-- wp:navigation {"className":"maxco-nav","layout":{"type":"flex","justifyContent":"center"}} -->
+				<!-- wp:navigation-link {"label":"Tjänster","url":"#tjanster"} /-->
+				<!-- wp:navigation-link {"label":"Så funkar det","url":"#sa-funkar-det"} /-->
+				<!-- wp:navigation-link {"label":"Referenser","url":"#referenser"} /-->
+				<!-- wp:navigation-link {"label":"Om oss","url":"#om-oss"} /-->
+			<!-- /wp:navigation -->
+
+			<!-- wp:buttons -->
+			<div class="wp-block-buttons">
+				<!-- wp:button {"className":"maxco-nav__cta"} -->
+				<div class="wp-block-button maxco-nav__cta"><a class="wp-block-button__link wp-element-button" href="#kontakt">Kontakta oss</a></div>
+				<!-- /wp:button -->
 			</div>
-
-			<nav class="maxco-nav" aria-label="Primary">
-				<a href="#tjanster">Tjänster <span class="dropdown-arrow">▼</span></a>
-				<a href="#sa-funkar-det">Så funkar det</a>
-				<a href="#referenser">Referenser</a>
-				<a href="#om-oss">Om oss <span class="dropdown-arrow">▼</span></a>
-			</nav>
-
-			<a class="maxco-nav__cta" href="#kontakt">Kontakta oss</a>
+			<!-- /wp:buttons -->
 		</div>
+		<!-- /wp:group -->
 	</div>
-</header>
+	<!-- /wp:group -->
+</div>
+<!-- /wp:group -->
