Update header logo markup to use heading element; adjust max-width of header inner for better layout

--- a/parts/header.html
+++ b/parts/header.html
@@ -4,7 +4,9 @@
 	<div class="wp-block-group maxco-header__inner">
 		<!-- wp:group {"className":"maxco-nav-bar","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
 		<div class="wp-block-group maxco-nav-bar">
-			<!-- wp:site-title {"level":0,"className":"maxco-logo"} /-->
+			<!-- wp:heading {"level":1,"className":"maxco-logo"} -->
+			<h1 class="wp-block-heading maxco-logo">Maxco</h1>
+			<!-- /wp:heading -->
 
 			<!-- wp:navigation {"className":"maxco-nav","layout":{"type":"flex","justifyContent":"center"}} -->
 				<!-- wp:navigation-link {"label":"Tjänster","url":"#tjanster"} /-->
