--- a/parts/header.html
+++ b/parts/header.html
@@ -14,6 +14,14 @@
 				<!-- wp:navigation-link {"label":"Referenser","url":"#referenser"} /-->
 				<!-- wp:navigation-link {"label":"Om oss","url":"#om-oss"} /-->
 			<!-- /wp:navigation -->
+
+			<!-- wp:buttons -->
+			<div class="wp-block-buttons">
+				<!-- wp:button {"className":"maxco-nav__cta"} -->
+				<div class="wp-block-button maxco-nav__cta"><a class="wp-block-button__link wp-element-button" href="#kontakt">Kontakta oss</a></div>
+				<!-- /wp:button -->
+			</div>
+			<!-- /wp:buttons -->
 		</div>
 		<!-- /wp:group -->
 	</div>
